--- a/assets/style.css
+++ b/assets/style.css
@@ -101,7 +101,7 @@ body {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #9b934c;
+  background-color: #5a5a5a;
   border-radius: 0;
 }
 .nav-pills .nav-link {
