--- a/assets/style.css
+++ b/assets/style.css
@@ -103,9 +103,11 @@ body {
   color: #fff;
   background-color: #5a5a5a;
   border-radius: 0;
+  cursor: pointer;
 }
 .nav-pills .nav-link {
   color: #000;
+  cursor: pointer;
 }
 .item-column {
   position: relative;
